--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,16 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": [
+    "src/components/Board.tsx",
+    "src/components/Square.tsx",
+    "src/customhooks/useTicTacToe.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
